--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "antd": "^4.12.3",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-google-login": "^5.2.2",
     "react-items-carousel": "^2.8.0",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
